--- a/examples/2_generate_pool.ipynb
+++ b/examples/2_generate_pool.ipynb
@@ -130,7 +130,7 @@
     "DATA_DIR = \"../spacier/data/\"\n",
     "monomer_path = DATA_DIR + \"monomer.csv\"\n",
     "df = pd.read_csv(monomer_path)\n",
-    "props = [\"refractive_index\", \"Cp\"]\n",
+    "props = [\"refractive_index\", \"abbe_number\"]\n",
     "\n",
     "df_pool = generate_pool(df)\n",
     "df_pool_X = calc_ff_descriptors(df_pool)\n",
