fix the examples

--- a/examples/0_Simple_examples.ipynb
+++ b/examples/0_Simple_examples.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spacier:  0.0.3\n"
+      "spacier:  0.0.4\n"
      ]
     }
    ],
@@ -56,8 +56,7 @@
     "df_X = pd.read_csv(f\"{data_path}/X.csv\")\n",
     "df_pool_X = pd.read_csv(f\"{data_path}/X_pool.csv\")\n",
     "\n",
-    "df = pd.read_csv(f\"{data_path}/y.csv\")\n",
-    "df_pool = pd.read_csv(f\"{data_path}/y_pool.csv\")"
+    "df = pd.read_csv(f\"{data_path}/y.csv\")"
    ]
   },
   {
@@ -83,12 +82,12 @@
      "output_type": "stream",
      "text": [
       "Number of candidates :  1067\n",
-      "[632, 850, 376, 117, 219, 132, 937, 9, 200, 710]\n"
+      "[432, 540, 68, 366, 192, 426, 886, 314, 429, 385]\n"
      ]
     }
    ],
    "source": [
-    "new_index = spacier.Random(df_X, df_pool_X , df, df_pool).sample(10)\n",
+    "new_index = spacier.Random(df_X, df_pool_X , df).sample(10)\n",
     "print(new_index)"
    ]
   },
@@ -116,12 +115,12 @@
      "text": [
       "Number of training data :  10\n",
       "Number of candidates :  1067\n",
-      "[939, 941, 747, 746, 740, 937, 748, 940, 738, 739]\n"
+      "[920, 730, 916, 917, 919, 914, 927, 722, 723, 731]\n"
      ]
     }
    ],
    "source": [
-    "new_index = spacier.BO(df_X, df_pool_X , df, df_pool,\"sklearn_GP\", [\"Cp\"]).uncertainty(10)\n",
+    "new_index = spacier.BO(df_X, df_pool_X , df,\"sklearn_GP\", [\"Cp\"]).uncertainty(10)\n",
     "print(new_index)"
    ]
   },
@@ -154,7 +153,7 @@
     }
    ],
    "source": [
-    "new_index = spacier.BO(df_X, df_pool_X , df, df_pool,\"sklearn_GP\", [\"Cp\"]).PI([[3000, 4000]], 10)\n",
+    "new_index = spacier.BO(df_X, df_pool_X , df, \"sklearn_GP\", [\"Cp\"]).PI([[3000, 4000]], 10)\n",
     "print(new_index)"
    ]
   },
@@ -183,7 +182,7 @@
     }
    ],
    "source": [
-    "new_index = spacier.BO(df_X, df_pool_X , df, df_pool,\"sklearn_GP\", [\"Cp\", \"refractive_index\"]).PI([[3000, 4000], [1.6, 1.7]], 10)\n",
+    "new_index = spacier.BO(df_X, df_pool_X , df, \"sklearn_GP\", [\"Cp\", \"refractive_index\"]).PI([[3000, 4000], [1.6, 1.7]], 10)\n",
     "print(new_index)"
    ]
   },
@@ -209,12 +208,12 @@
      "text": [
       "Number of training data :  10\n",
       "Number of candidates :  1067\n",
-      "[335, 268, 754, 409, 410, 411, 134, 413, 330, 412]\n"
+      "[410, 330, 413, 335, 411, 754, 268, 409, 134, 412]\n"
      ]
     }
    ],
    "source": [
-    "new_index = spacier.BO(df_X, df_pool_X , df, df_pool,\"sklearn_GP\", [\"Cp\"]).EI(10)\n",
+    "new_index = spacier.BO(df_X, df_pool_X , df,\"sklearn_GP\", [\"Cp\"]).EI(10)\n",
     "print(new_index)"
    ]
   },
@@ -240,12 +239,12 @@
      "text": [
       "Number of training data :  10\n",
       "Number of candidates :  1067\n",
-      "[335, 413, 330, 410, 411, 754, 268, 409, 331, 134]\n"
+      "[335, 411, 413, 410, 330, 754, 268, 331, 409, 134]\n"
      ]
     }
    ],
    "source": [
-    "new_index = spacier.BO(df_X, df_pool_X , df, df_pool,\"sklearn_GP\", [\"Cp\"]).UCB(10)\n",
+    "new_index = spacier.BO(df_X, df_pool_X , df, \"sklearn_GP\", [\"Cp\"]).UCB(10)\n",
     "print(new_index)"
    ]
   },
@@ -271,15 +270,15 @@
      "text": [
       "Number of training data :  10\n",
       "Number of candidates :  1067\n",
-      "[487, 793, 456, 485, 823, 825, 818, 821, 822, 824]\n",
-      "CPU times: user 5.08 s, sys: 818 ms, total: 5.9 s\n",
-      "Wall time: 4.71 s\n"
+      "[330, 486, 413, 412, 411, 623, 410, 353, 335, 390]\n",
+      "CPU times: total: 2.03 s\n",
+      "Wall time: 2.33 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "new_index = spacier.BO(df_X, df_pool_X , df, df_pool,\"sklearn_GP\", [\"Cp\", \"refractive_index\"], standardization=True).EHVI(10)\n",
+    "new_index = spacier.BO(df_X, df_pool_X , df,\"sklearn_GP\", [\"Cp\", \"refractive_index\"], standardization=True).EHVI(10)\n",
     "print(new_index)"
    ]
   }
@@ -300,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
