Rename file 4_Using_Mymodel .ipynb to 4_Using_Mymodel.ipynb and add comments

--- a/examples/4_Using_Mymodel.ipynb
+++ b/examples/4_Using_Mymodel.ipynb
@@ -46,7 +46,9 @@
    "id": "c907814c",
    "metadata": {},
    "source": [
-    "## Data preparation (Binh and Korn function)"
+    "## Data Preparation (Binh and Korn Function)\n",
+    "\n",
+    "In this section, we generate synthetic data for our experiment. We define the range of our input variables, create random samples, and prepare our dataset."
    ]
   },
   {
@@ -76,6 +78,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4af71031",
+   "metadata": {},
+   "source": [
+    "## Bayesian Optimization with Custom Model\n",
+    "\n",
+    "We apply Bayesian Optimization using the `spacier` package's custom model (`Mymodel`). The Expected Improvement (EI) criterion is used to select new points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "4af71031",
@@ -95,6 +107,16 @@
    "source": [
     "%%time\n",
     "new_index = spacier.BO(df_X, df, df_pool_X, \"Mymodel\", [\"y1\"]).EI(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9407478",
+   "metadata": {},
+   "source": [
+    "## Bayesian Optimization with Scikit-learn Gaussian Process\n",
+    "\n",
+    "We now perform Bayesian Optimization using a Gaussian Process model from `scikit-learn` to compare results. The EI criterion is again used for selection."
    ]
   },
   {
