--- a/examples/1_Experiments.ipynb
+++ b/examples/1_Experiments.ipynb
@@ -67,7 +67,7 @@
     "    df_pool_X = pd.read_csv(f\"{data_path}/X_pool.csv\")\n",
     "\n",
     "    df = pd.read_csv(f\"{data_path}/y.csv\")\n",
-    "    df_oracle = pd.read_csv(f\"{data_path}//y_oracle_test.csv\")\n",
+    "    df_oracle = pd.read_csv(f\"{data_path}/y_oracle.csv\")\n",
     "    \n",
     "    return df_X, df_pool_X, df, df_oracle"
    ]
